test/configCases/errors/self-reexport/bb.js
import {something} from "./b";

something();
